[package]
name = "ruspiro-test-framework"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.1.0" # remember to update html_root_url in lib.rs
description = """
RusPiRo test framework to enable unit and integration tests for ruspiro crates
being executed using QEMU.
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RusPiRo/ruspiro-test-framework/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-test-framework/||VERSION||"
categories = ["no-std", "embedded"]
keywords = ["ruspiro"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]
publish = false
links = "ruspiro_test_framework"

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-test", branch = "release" }
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "RusPiRo/ruspiro-test" }

[lib]

[build-dependencies]
# uncomment this if a build.rs script should be run as part of the build process
# cc = "1.0"


[dependencies]
qemu-exit = { version = "1.0.0" }
ruspiro-boot = { path = "../ruspiro-boot" } #"0.4.1"
ruspiro-allocator = "0.4.2"
ruspiro-console = "0.3.2"
ruspiro-uart = "0.3.1"
ruspiro-mmu = "0.1"
ruspiro-mailbox = "0.4"
ruspiro-test-macros = { path = "./macros/" }

[features]
ruspiro_pi3 = [
    "ruspiro-uart/ruspiro_pi3",
    "ruspiro-mailbox/ruspiro_pi3"
]
test = [ 
    "ruspiro-boot/test"
]

[patch.crates-io]
# we require an entry for each dependent RUSPIRO crate here
# this increases PR build stability if dependent crates got updated but are not
# published to crates.io yet.
# !This section need to be always the last in the Cargo.toml file!
# ruspiro-register = { git = "https://github.com/RusPiRo/ruspiro-register.git", branch = "master" }
# ruspiro-console = { git = "https://github.com/RusPiRo/ruspiro-console.git", branch = "feature/release4.0" }
#ruspiro-boot = { path = "../ruspiro-boot" }
#ruspiro-boot = { git = "https://github.com/RusPiRo/ruspiro-boot.git", branch = "feature/testframework" } #"0.4.1"
