[package]
name = "ruspiro-test-framework"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.1.0" # remember to update html_root_url in lib.rs
description = """
RusPiRo test framework to enable unit and integration tests for ruspiro crates
being executed using QEMU.
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RusPiRo/ruspiro-test-framework/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-test-framework/||VERSION||"
categories = ["no-std", "embedded"]
keywords = ["ruspiro"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]
publish = false
links = "ruspiro_test_framework"

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-test-framework", branch = "release" }
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "RusPiRo/ruspiro-test-framework" }

[lib]

[dependencies]
qemu-exit = { version = "1.0.0" }
ruspiro-boot = { version = "0.4.2", features = ["multicore"]}
ruspiro-allocator = "0.4.2"
ruspiro-console = "0.3.2"
ruspiro-uart = "0.3.1"
ruspiro-mmu = "0.1"
ruspiro-mailbox = "0.4"
ruspiro-test-macros = { path = "./macros/" }
ruspiro-channel = { git = "https://github.com/RusPiRo/ruspiro-channel.git" }

[features]
ruspiro_pi3 = [
    "ruspiro-uart/ruspiro_pi3",
    "ruspiro-mailbox/ruspiro_pi3"
]
test = [ ]

[patch.crates-io]
