[package]
name = "ruspiro-test-framework"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.1.0" # remember to update html_root_url in lib.rs
description = """
RusPiRo test framework to enable unit and integration tests for ruspiro crates
being executed using QEMU.
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RusPiRo/ruspiro-test-framework/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-test-framework/||VERSION||"
categories = ["no-std", "embedded"]
keywords = ["ruspiro"]
edition = "2018"
exclude = ["Makefile.toml", ".github", ".cargo/config.toml"]
publish = false
links = "ruspiro_test_framework"

[badges]
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
# get functions like memset, memcpy into the binary
rlibc = "=1.0.0"
qemu-exit = "~3.0.0"
ruspiro-boot = { version = "~0.5.4", default-features = false }
ruspiro-arch-aarch64 = "~0.1.7"
ruspiro-mmio-register = "~0.1.4"
ruspiro-allocator = "~0.4.6"
ruspiro-mmu = "~0.1.1"
ruspiro-test-macros = { path = "./macros/" }
ruspiro-channel = "~0.1.1"

[features]
multicore = ["ruspiro-boot/multicore"]

[patch.crates-io]
ruspiro-boot = { git = "https://github.com/RusPiRo/ruspiro-boot.git", branch = "development" }
ruspiro-allocator = { git = "https://github.com/RusPiRo/ruspiro-allocator.git", branch = "development" }
